@@ -178,8 +178,6 @@ class HTMLThemeFactory:
         """Try to load a theme having specifed name."""
         if name == 'alabaster':
             self.load_alabaster_theme()
-        elif name == 'sphinx_rtd_theme':
-            self.load_sphinx_rtd_theme()
         else:
             self.load_external_theme(name)
 
@@ -237,13 +235,13 @@ class HTMLThemeFactory:
         if name not in self.themes:
             self.load_extra_theme(name)
 
+        if name not in self.themes and name == 'sphinx_rtd_theme':
+            # sphinx_rtd_theme (< 0.2.5)  # RemovedInSphinx60Warning
+            logger.warning(__('sphinx_rtd_theme (< 0.3.0) found. '
+                              'It will not be available since Sphinx-6.0'))
+            self.load_sphinx_rtd_theme()
+
         if name not in self.themes:
-            if name == 'sphinx_rtd_theme':
-                raise ThemeError(__('sphinx_rtd_theme is no longer a hard dependency '
-                                    'since version 1.4.0. Please install it manually.'
-                                    '(pip install sphinx_rtd_theme)'))
-            else:
-                raise ThemeError(__('no theme named %r found '
-                                    '(missing theme.conf?)') % name)
+            raise ThemeError(__('no theme named %r found (missing theme.conf?)') % name)
 
         return Theme(name, self.themes[name], factory=self)
